// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InlineLinkContainer external link accessibility should be explicitly marked "external" for screen reader users & localised 1`] = `
.c0 {
  color: #222222;
  border-bottom: 1px solid #B80000;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:visited {
  color: #757575;
  border-bottom: 1px solid #757575;
}

.c0:focus {
  color: #B80000;
  border-bottom: 2px solid #B80000;
}

.c0:hover {
  color: #B80000;
  border-bottom: 2px solid #B80000;
}

.c1 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
}

<a
  className="c0"
  href="https://www.example.com/"
>
  این لینک هست
  <span
    className="c1"
  >
     ،لینک خارجی
  </span>
</a>
`;

exports[`InlineLinkContainer external link accessibility should be explicitly marked "external" for screen reader users 1`] = `
.c0 {
  color: #222222;
  border-bottom: 1px solid #B80000;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:visited {
  color: #757575;
  border-bottom: 1px solid #757575;
}

.c0:focus {
  color: #B80000;
  border-bottom: 2px solid #B80000;
}

.c0:hover {
  color: #B80000;
  border-bottom: 2px solid #B80000;
}

.c1 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
}

<a
  className="c0"
  href="https://www.example.com/"
>
  This is a link
  <span
    className="c1"
  >
    , external
  </span>
</a>
`;

exports[`InlineLinkContainer internal link not matching SPA route should render correctly 1`] = `
.c0 {
  color: #222222;
  border-bottom: 1px solid #B80000;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:visited {
  color: #757575;
  border-bottom: 1px solid #757575;
}

.c0:focus {
  color: #B80000;
  border-bottom: 2px solid #B80000;
}

.c0:hover {
  color: #B80000;
  border-bottom: 2px solid #B80000;
}

<a
  className="c0"
  href="https://www.bbc.com/news"
>
  <b>
    This is bold text for a link
  </b>
</a>
`;

exports[`InlineLinkContainer link matching routes for SPA should render correctly 1`] = `
.c0 {
  color: #222222;
  border-bottom: 1px solid #B80000;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:visited {
  color: #757575;
  border-bottom: 1px solid #757575;
}

.c0:focus {
  color: #B80000;
  border-bottom: 2px solid #B80000;
}

.c0:hover {
  color: #B80000;
  border-bottom: 2px solid #B80000;
}

<a
  className="-Link c0"
  href="/news/articles/c0g992jmmkko"
  onClick={[Function]}
>
  This is text for an internal link
</a>
`;

exports[`InlineLinkContainer link matching routes for SPA should render correctly for TEST environment 1`] = `
.c0 {
  color: #222222;
  border-bottom: 1px solid #B80000;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:visited {
  color: #757575;
  border-bottom: 1px solid #757575;
}

.c0:focus {
  color: #B80000;
  border-bottom: 2px solid #B80000;
}

.c0:hover {
  color: #B80000;
  border-bottom: 2px solid #B80000;
}

<a
  className="-Link c0"
  href="/news/articles/c0g992jmmkko"
  onClick={[Function]}
>
  This is text for an internal link
</a>
`;
